--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,107 +1,1 @@
-.alert-fixed {
-  position: fixed;
-  top: 0px;
-  right: 0px;
-  width: 20%;
-  z-index: 9999;
-}
-
-.autocomplete {
-  /*the container must be positioned relative:*/
-  position: relative;
-}
-
-.autocomplete-items {
-  position: absolute;
-  border: 1px solid #d4d4d4;
-  border-bottom: none;
-  border-top: none;
-  z-index: 99;
-  /*position the autocomplete items to be the same width as the container:*/
-  top: 100%;
-  left: 0;
-  right: 0;
-}
-
-.autocomplete-items div {
-  padding: 10px;
-  cursor: pointer;
-  background-color: #fff;
-  border-bottom: 1px solid #d4d4d4;
-}
-
-.autocomplete-items div:hover {
-  /*when hovering an item:*/
-  background-color: #e9e9e9;
-}
-
-.autocomplete-active {
-  /*when navigating through the items using the arrow keys:*/
-  background-color: DodgerBlue !important;
-  color: #ffffff;
-}
-
-.artist {
-  width: 240px !important;
-  height: 360px;
-  margin-right: 20px;
-  background: #282828;
-}
-
-.artist:last-child {
-  margin: 0;
-}
-
-.artist__thumbnail {
-  position: relative;
-  width: 240px;
-  height: 240px;
-  overflow: hidden;
-}
-
-.artist__blur {
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-filter: blur(40px);
-          filter: blur(40px);
-  z-index: 1;
-}
-
-.artist__image {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-  z-index: 3;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.artist__ring {
-  width: 160px;
-  height: 160px;
-  border-radius: 50%;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0) 80%, rgba(255, 255, 255, 0.2) 100%);
-  z-index: 2;
-  box-shadow: 4px 0 2px -4px rgba(255, 255, 255, 0.9), -4px 0 2px -4px rgba(255, 255, 255, 0.9);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.artist__ring--outer {
-  width: 200px;
-  height: 200px;
-}
-
-.artist__label {
-  display: flex;
-  height: 120px;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 15px 10px;
-}
-
+.alert-fixed{position:fixed;top:0;right:0;width:20%;z-index:9999}.autocomplete{position:relative}.autocomplete-items{position:absolute;border:1px solid #d4d4d4;border-top:none;border-bottom:none;z-index:99;top:100%;left:0;right:0}.autocomplete-items div{padding:10px;cursor:pointer;background-color:#fff;border-bottom:1px solid #d4d4d4}.autocomplete-items div:hover{background-color:#e9e9e9}.autocomplete-active{background-color:#1e90ff!important;color:#fff}.artist{width:240px!important;height:360px;margin-right:20px;background:#282828}.artist:last-child{margin:0}.artist__thumbnail{position:relative;width:240px;height:240px;overflow:hidden}.artist__blur{position:absolute;top:0;left:0;-webkit-filter:blur(40px);filter:blur(40px);z-index:1}.artist__image{width:120px;height:120px;z-index:3}.artist__image,.artist__ring{border-radius:50%;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%)}.artist__ring{width:160px;height:160px;background:linear-gradient(90deg,hsla(0,0%,100%,.2),transparent 20%,transparent 80%,hsla(0,0%,100%,.2));z-index:2;box-shadow:4px 0 2px -4px hsla(0,0%,100%,.9),-4px 0 2px -4px hsla(0,0%,100%,.9)}.artist__ring--outer{width:200px;height:200px}.artist__label{display:flex;height:120px;flex-direction:column;justify-content:space-between;padding:15px 10px}
